--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
             </table>
         </div>
         <div id="resultado">
-            
+            Sua situação aparecerá aqui!
         </div>
     </aside>
     <footer>
-        <p>Desenvolvido por &copy;<a href="https://www.instagram.com/lucassss.lc/" target="_blank">DevLucas</a></p>
+        <p>&copy;<a href="https://www.instagram.com/lucassss.lc/" target="_blank">Lucas Evangelista 2023</a></p>
     </footer>
     <script src="scripts.js"></script>
 </body>
