--- a/sobre.html
+++ b/sobre.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nós</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Desenvolvido por Lucas Evangelista.</h1>
+    <header>
+        <h1>Como funciona o site?</h1>
+        <nav>
+            <a href="index.html">Início</a>
+            <a href="duvidas.html">Duvidas?</a>
+            <a href="sobre.html">Sobre</a>
+        </nav>
+    </header>
 </body>
 </html>
