--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Calcular Notas</h1>
         <nav>
             <a href="index.html">Início</a>
-            <a href="duvidas.html" target="_blank">Duvidas?</a>
-            <a href="sobre.html" target="_blank">Sobre</a>
+            <a href="duvidas.html">Duvidas?</a>
+            <a href="sobre.html">Sobre</a>
         </nav>
     </header>
     <section>
@@ -68,7 +68,7 @@
         </div>
     </aside>
     <footer>
-        <p>&copy;<a href="https://www.instagram.com/lucassss.lc/" target="_blank">Lucas Evangelista 2023</a></p>
+        <p>&copy;<a href="https://www.instagram.com/lucassss.lc/" target="_blank">Lucas Evangelista-2023. Todos os Direitos Reservados.</a></p>
     </footer>
     <script src="scripts.js"></script>
 </body>
