--- a/sobre.html
+++ b/sobre.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nós</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Como funciona o site?</h1>
@@ -15,5 +17,26 @@
             <a href="sobre.html">Sobre</a>
         </nav>
     </header>
+    <main>
+        <h1>Um pouco sobre nós</h1>
+        <p>
+            No dia 19 de Dezembro de 2023, lançamos oficialmente o site "Calcular Notas", uma inovadora plataforma
+            online dedicada a apoiar estudantes no cálculo de médias e na avaliação de sua situação acadêmica. Bem-vindo
+            a uma ferramenta que visa simplificar e aprimorar a experiência dos estudantes ao proporcionar informações
+            valiosas para o gerenciamento eficiente de seu desempenho acadêmico.</p>
+        <p>O Calcular Notas não é apenas uma calculadora de médias; é uma fonte abrangente de assistência acadêmica.
+            Nossa plataforma intuitiva permite que os usuários insiram suas notas de maneira fácil e rápida, fornecendo,
+            em tempo real, dados cruciais, como a média atual. No entanto, não nos limitamos apenas a isso; nosso
+            serviço vai além ao oferecer sugestões perspicazes sobre as notas necessárias para atingir metas
+            específicas.
+        </p>
+        <p>
+            Nosso compromisso é proporcionar uma experiência educacional mais transparente e capacitadora. Acreditamos que ao entender melhor seu desempenho acadêmico, os estudantes podem tomar decisões mais informadas sobre seus estudos, contribuindo assim para o seu sucesso educacional.
+        </p>
+        <p>
+            Junte-se a nós no Calcular Notas, onde o caminho para o sucesso acadêmico começa com informações claras e apoio personalizado.
+        </p>
+    </main>
 </body>
+
 </html>
