--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Calcular Notas</h1>
         <nav>
             <a href="index.html">Início</a>
-            <a href="duvidas.html">Duvidas?</a>
+            <a href="duvidas.html">Duvidas</a>
             <a href="sobre.html">Sobre</a>
         </nav>
     </header>
