--- a/sobre.html
+++ b/sobre.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nós</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -13,11 +13,11 @@
         <h1>Como funciona o site?</h1>
         <nav>
             <a href="index.html">Início</a>
-            <a href="duvidas.html">Duvidas?</a>
+            <a href="duvidas.html">Duvidas</a>
             <a href="sobre.html">Sobre</a>
         </nav>
     </header>
-    <main>
+    <section class="informacoes">
         <h1>Um pouco sobre nós</h1>
         <p>
             No dia 19 de Dezembro de 2023, lançamos oficialmente o site "Calcular Notas", uma inovadora plataforma
@@ -31,12 +31,21 @@
             específicas.
         </p>
         <p>
-            Nosso compromisso é proporcionar uma experiência educacional mais transparente e capacitadora. Acreditamos que ao entender melhor seu desempenho acadêmico, os estudantes podem tomar decisões mais informadas sobre seus estudos, contribuindo assim para o seu sucesso educacional.
+            Nosso compromisso é proporcionar uma experiência educacional mais transparente e capacitadora. Acreditamos
+            que ao entender melhor seu desempenho acadêmico, os estudantes podem tomar decisões mais informadas sobre
+            seus estudos, contribuindo assim para o seu sucesso educacional.
         </p>
         <p>
-            Junte-se a nós no Calcular Notas, onde o caminho para o sucesso acadêmico começa com informações claras e apoio personalizado.
+            Junte-se a nós no Calcular Notas, onde o caminho para o sucesso acadêmico começa com informações claras e
+            apoio personalizado.
         </p>
-    </main>
+    </section>
+    <footer>
+        <div>
+            <p>Desenvolvido por</p>
+            <a href="http://instagram.com/_lucode" target="_blank"><img src="imagens/1.png" alt="Agência Lucode"></a>
+        </div>
+    </footer>
 </body>
 
 </html>
