--- a/duvidas.html
+++ b/duvidas.html
@@ -1,33 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como funciona o site</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <header>
         <h1>Como funciona o site?</h1>
         <nav>
             <a href="index.html">Início</a>
-            <a href="duvidas.html">Duvidas?</a>
+            <a href="duvidas.html">Duvidas</a>
             <a href="sobre.html">Sobre</a>
         </nav>
     </header>
-    <main>
+    <section class="informacoes">
         <h1>Algumas dúvidas sobre a Calculadora de Notas</h1>
         <h2>Como funciona o site?</h2>
-        <p>Inicialmente, você deve digitar suas notas. É necessário inserir pelo menos uma nota para que o sistema calcule sua média e indique sua situação. O sistema aceita apenas notas iguais ou superiores a 0 (zero) e iguais ou inferiores a 10 (dez).</p>
+        <p>Inicialmente, você deve digitar suas notas. É necessário inserir pelo menos uma nota para que o sistema
+            calcule sua média e indique sua situação. O sistema aceita apenas notas iguais ou superiores a 0 (zero) e
+            iguais ou inferiores a 10 (dez).</p>
 
         <h2>O sistema pode me mostrar quanto eu preciso tirar nas proximas notas para atingir uma média aprovativa?</h2>
-        <p>Sim, o sistema é capaz de mostrar quanto você precisa tirar nas próximas notas para atingir uma média aprovativa. Ele verifica as notas que você forneceu e calcula qual nota você precisa obter nas próximas avaliações para alcançar a média desejada.</p>
+        <p>Sim, o sistema é capaz de mostrar quanto você precisa tirar nas próximas notas para atingir uma média
+            aprovativa. Ele verifica as notas que você forneceu e calcula qual nota você precisa obter nas próximas
+            avaliações para alcançar a média desejada.</p>
 
         <h2>O sistema me mostra se eu já estou de recuperação final?</h2>
-        <p>Sim, o sistema é capaz de verificar se você já está em recuperação final. Se você forneceu duas notas e essas notas são muito baixas, mesmo que você tire 10 nas notas não digitadas, você já está em situação de recuperação final. O sistema faz essa análise e informa sobre a necessidade de recuperação com base nas notas fornecidas.</p>
+        <p>Sim, o sistema é capaz de verificar se você já está em recuperação final. Se você forneceu duas notas e essas
+            notas são muito baixas, mesmo que você tire 10 nas notas não digitadas, você já está em situação de
+            recuperação final. O sistema faz essa análise e informa sobre a necessidade de recuperação com base nas
+            notas fornecidas.</p>
 
         <h2>O sistema mostra quanto eu preciso tirar na prova final para ser aprovado(a)?</h2>
-        <p>Sim, se você fornecer as quatro notas, o sistema calculará a média. Se a média não for aprovativa, o sistema mostrará quanto você precisa tirar na prova final para ser aprovado.</p>
-    </main>
+        <p>Sim, se você fornecer as quatro notas, o sistema calculará a média. Se a média não for aprovativa, o sistema
+            mostrará quanto você precisa tirar na prova final para ser aprovado.</p>
+    </section>
+    <footer>
+        <div>
+            <p>Desenvolvido por</p>
+            <a href="http://instagram.com/_lucode" target="_blank"><img src="imagens/1.png" alt="Agência Lucode"></a>
+        </div>
+    </footer>
 </body>
+
 </html>
