--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
     </main>
     <footer>
         <div>
-            <p>Desenvolvido por</p>
-            <a href="http://instagram.com/_lucode" target="_blank"><img src="imagens/1.png" alt="Agência Lucode"></a>
+            <p>Desenvolvido por <a href="http://instagram.com/lucassss.lc" target="_blank">Lucas Evangelista</a></p>
         </div>
     </footer>
     <script src="js/scripts.js"></script>
